--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "next": "15.1.7",
+    "mongodb": "^6.3.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "monaco-editor": "^0.45.0",
+    "@monaco-editor/react": "^4.6.0"
   },
   "devDependencies": {
     "typescript": "^5",
